[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/base/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/base/settings/controller.gd" type="Script" id=2]





[node name="controller" type="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings_Scroll" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
follow_focus = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings_VBC" type="VBoxContainer" parent="Settings_Scroll"]
margin_right = 854.0
margin_bottom = 456.0
size_flags_horizontal = 3
theme = ExtResource( 1 )

[node name="Controller_HBC" type="HBoxContainer" parent="Settings_Scroll/Settings_VBC"]
margin_right = 854.0
margin_bottom = 20.0

[node name="Controller_Label" type="Label" parent="Settings_Scroll/Settings_VBC/Controller_HBC"]
margin_right = 188.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 5
size_flags_stretch_ratio = 0.4
text = "Controller : "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controller_OptionButton" type="OptionButton" parent="Settings_Scroll/Settings_VBC/Controller_HBC"]
margin_left = 192.0
margin_right = 662.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Controller_Refresh_Button" type="Button" parent="Settings_Scroll/Settings_VBC/Controller_HBC"]
margin_left = 666.0
margin_right = 854.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
text = "refresh"

[node name="Vibration_CheckButton" type="CheckButton" parent="Settings_Scroll/Settings_VBC"]
margin_top = 24.0
margin_right = 854.0
margin_bottom = 64.0
text = "Vibration"

[node name="WM_HBC" type="HBoxContainer" parent="Settings_Scroll/Settings_VBC"]
margin_top = 68.0
margin_right = 854.0
margin_bottom = 84.0

[node name="WM_Label" type="Label" parent="Settings_Scroll/Settings_VBC/WM_HBC"]
margin_top = 1.0
margin_right = 225.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
text = "Weak Magnitude : "

[node name="WM_Slider" type="HSlider" parent="Settings_Scroll/Settings_VBC/WM_HBC"]
margin_left = 229.0
margin_right = 793.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.1
tick_count = 10

[node name="WM_Value" type="Label" parent="Settings_Scroll/Settings_VBC/WM_HBC"]
margin_left = 797.0
margin_top = 1.0
margin_right = 854.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="SM_HBC" type="HBoxContainer" parent="Settings_Scroll/Settings_VBC"]
margin_top = 88.0
margin_right = 854.0
margin_bottom = 104.0

[node name="SM_Label" type="Label" parent="Settings_Scroll/Settings_VBC/SM_HBC"]
margin_top = 1.0
margin_right = 225.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
text = "Strong Magnitude : "

[node name="SM_Slider" type="HSlider" parent="Settings_Scroll/Settings_VBC/SM_HBC"]
margin_left = 229.0
margin_right = 793.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.1
tick_count = 10

[node name="SM_Value" type="Label" parent="Settings_Scroll/Settings_VBC/SM_HBC"]
margin_left = 797.0
margin_top = 1.0
margin_right = 854.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="TM_HBC" type="HBoxContainer" parent="Settings_Scroll/Settings_VBC"]
margin_top = 108.0
margin_right = 854.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WM_Button" type="Button" parent="Settings_Scroll/Settings_VBC/TM_HBC"]
margin_right = 282.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Weak Test"

[node name="SM_Button" type="Button" parent="Settings_Scroll/Settings_VBC/TM_HBC"]
margin_left = 286.0
margin_right = 568.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Strong Test"

[node name="CM_Button" type="Button" parent="Settings_Scroll/Settings_VBC/TM_HBC"]
margin_left = 572.0
margin_right = 854.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Combined Test"

[node name="LY_Label" type="Label" parent="Settings_Scroll/Settings_VBC"]
margin_top = 132.0
margin_right = 854.0
margin_bottom = 146.0
text = "Left Y Sensitivity"

[node name="LY_HBC" type="HBoxContainer" parent="Settings_Scroll/Settings_VBC"]
margin_top = 150.0
margin_right = 854.0
margin_bottom = 166.0

[node name="LY_Slider" type="HSlider" parent="Settings_Scroll/Settings_VBC/LY_HBC"]
margin_right = 708.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 5.0
step = 0.01
tick_count = 5

[node name="LY_Value" type="Label" parent="Settings_Scroll/Settings_VBC/LY_HBC"]
margin_left = 712.0
margin_top = 1.0
margin_right = 854.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="LY_CheckButton" type="CheckButton" parent="Settings_Scroll/Settings_VBC"]
margin_top = 170.0
margin_right = 854.0
margin_bottom = 210.0
text = "Left Y Invert"

[node name="LX_Label" type="Label" parent="Settings_Scroll/Settings_VBC"]
margin_top = 214.0
margin_right = 854.0
margin_bottom = 228.0
text = "Left X Sensitivity"

[node name="LX_HBC" type="HBoxContainer" parent="Settings_Scroll/Settings_VBC"]
margin_top = 232.0
margin_right = 854.0
margin_bottom = 248.0

[node name="LX_Slider" type="HSlider" parent="Settings_Scroll/Settings_VBC/LX_HBC"]
margin_right = 708.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 5.0
step = 0.01
tick_count = 5

[node name="LX_Value" type="Label" parent="Settings_Scroll/Settings_VBC/LX_HBC"]
margin_left = 712.0
margin_top = 1.0
margin_right = 854.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="LX_CheckButton" type="CheckButton" parent="Settings_Scroll/Settings_VBC"]
margin_top = 252.0
margin_right = 854.0
margin_bottom = 292.0
text = "Left X Invert"

[node name="RY_Label" type="Label" parent="Settings_Scroll/Settings_VBC"]
margin_top = 296.0
margin_right = 854.0
margin_bottom = 310.0
text = "Right Y Sensitivity"

[node name="RY_HBC" type="HBoxContainer" parent="Settings_Scroll/Settings_VBC"]
margin_top = 314.0
margin_right = 854.0
margin_bottom = 330.0

[node name="RY_Slider" type="HSlider" parent="Settings_Scroll/Settings_VBC/RY_HBC"]
margin_right = 708.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 5.0
step = 0.01
tick_count = 5

[node name="RY_Value" type="Label" parent="Settings_Scroll/Settings_VBC/RY_HBC"]
margin_left = 712.0
margin_top = 1.0
margin_right = 854.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="RY_CheckButton" type="CheckButton" parent="Settings_Scroll/Settings_VBC"]
margin_top = 334.0
margin_right = 854.0
margin_bottom = 374.0
text = "Right Y Invert"

[node name="RX_Label" type="Label" parent="Settings_Scroll/Settings_VBC"]
margin_top = 378.0
margin_right = 854.0
margin_bottom = 392.0
text = "Right X Sensitivity"

[node name="RX_HBC" type="HBoxContainer" parent="Settings_Scroll/Settings_VBC"]
margin_top = 396.0
margin_right = 854.0
margin_bottom = 412.0

[node name="RX_Slider" type="HSlider" parent="Settings_Scroll/Settings_VBC/RX_HBC"]
margin_right = 708.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 5.0
step = 0.01
tick_count = 5

[node name="RX_Value" type="Label" parent="Settings_Scroll/Settings_VBC/RX_HBC"]
margin_left = 712.0
margin_top = 1.0
margin_right = 854.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="RX_CheckButton" type="CheckButton" parent="Settings_Scroll/Settings_VBC"]
margin_top = 416.0
margin_right = 854.0
margin_bottom = 456.0
text = "Right X Invert"
